double arrow overlapped fixed

--- a/dpc-web/app/assets/stylesheets/components/_fields.scss
+++ b/dpc-web/app/assets/stylesheets/components/_fields.scss
@@ -1,7 +1,16 @@
+.drop-down {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
 .field--follow-up {
   border-left: 5px solid $color-primary-alt-light;
   margin-left: $spacer-2;
   padding: 0 0 $spacer-1 $spacer-3;
+}
+
+.remove_focus:focus {
+  box-shadow: 0 !important;
 }
 
 .required {
